# pybind11-stubgen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
pybind11_stubgen/: __init__.py  printer.py  structs.py
pybind11_stubgen/parser/: interface.py
pybind11_stubgen/parser/mixins/: filter.py  fix.py  parse.py
tests/: check-demo-stubs-generation.sh  install-demo-module.sh  test_overload_fallback.py
tests/demo-lib/include/demo/: Inheritance.h
tests/py-demo/bindings/src/: main.cpp
tests/py-demo/bindings/src/modules/: classes.cpp  enum.cpp  functions.cpp  hidden_builtins.cpp  methods.cpp  stl.cpp
tests/py-demo/demo/pure_python/: functions_3_8_plus.py
tests/stubs/python-3.10/: pybind11-v2.11  pybind11-v2.12  pybind11-v2.13  requirements.txt
tests/stubs/python-3.10/pybind11-v3.0/: numpy-array-use-type-var
tests/stubs/python-3.10/pybind11-v3.0/numpy-array-wrap-with-annotated/demo/_bindings/: enum.pyi
tests/stubs/python-3.10/pybind11-v3.0/numpy-array-wrap-with-annotated/demo/pure_python/: functions_3_8_plus.pyi
tests/stubs/python-3.11/pybind11-v2.11/numpy-array-wrap-with-annotated/demo/_bindings/: eigen.pyi  functions.pyi
tests/stubs/python-3.11/pybind11-v2.13/numpy-array-use-type-var/demo/_bindings/: eigen.pyi  stl_bind.pyi
tests/stubs/python-3.11/pybind11-v2.13/numpy-array-wrap-with-annotated/demo/_bindings/: flawed_bindings.pyi  functions.pyi
tests/stubs/python-3.11/pybind11-v2.9/numpy-array-wrap-with-annotated/demo/_bindings/: functions.pyi  issues.pyi  stl_bind.pyi
(+38 files in other folders)
